@@ -17,6 +17,13 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Remove autohook inserted in items, and use was_destroyed() to check item's validity.
+ plugins/cfpython/include/cfpython_object.h: keep item's count, change check macros.
+ plugins/cfpython/cfpython_map.c: fix wrong EXISTCHECK_INT to MAPEXISTCHECK_INT.
+ plugins/cfpython/cfpython_object.c: remove autohook stuff, use item's count.
+ plugins/cfpython/cfpython.c: remove autohook handling.
+Nicolas Weeger 2008-03-29
+
 Fix protocol issues regarding sent items: do not send invisible items.
   common/object.c
 Andreas Kirschbaum 2008-03-21
